--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,3 +4,8 @@ pandas==1.5.3
 pyodbc==4.0.34
 pywin32==305.1
 SQLAlchemy==1.4.39
+pymysql==1.1.0
+mysql==0.0.3
+mysql-connector==2.2.9
+mysqlclient==8.1.0
+mysql-connector-python==8.1.0
